# qdrant_images

./: .gitignore  README.md  app.py  compose.yaml  database.py  db_test.py  hf_downloader.py  old_app.py  pre_process.py  pyproject.toml  requirements.txt  sw_app.py  sw_database.py
