[project]
name = "qdrant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.4.0",
    "gradio>=5.21.0",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=3.4.1",
    "sentencepiece>=0.2.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]

[tool.uv.workspace]
members = ["venv"]
